@@ -22,6 +22,8 @@ protected:
 private:
     SK_FLATTENABLE_HOOKS(SkOpPE)
 
+    bool computeFastBounds(SkRect* bounds) const override;
+
     sk_sp<SkPathEffect> fOne;
     sk_sp<SkPathEffect> fTwo;
     SkPathOp            fOp;
@@ -40,6 +42,13 @@ protected:
 private:
     SK_FLATTENABLE_HOOKS(SkMatrixPE)
 
+    bool computeFastBounds(SkRect* bounds) const override {
+        if (bounds) {
+            fMatrix.mapRect(bounds);
+        }
+        return true;
+    }
+
     SkMatrix    fMatrix;
 
     using INHERITED = SkPathEffect;
@@ -52,10 +61,11 @@ public:
 protected:
     void flatten(SkWriteBuffer&) const override;
     bool onFilterPath(SkPath* dst, const SkPath& src, SkStrokeRec*, const SkRect*) const override;
-    // TODO: override onComputeFastBounds (I think)
 
 private:
     SK_FLATTENABLE_HOOKS(SkStrokePE)
+
+    bool computeFastBounds(SkRect* bounds) const override;
 
     SkScalar        fWidth,
                     fMiter;
@@ -72,13 +82,16 @@ public:
 protected:
     void flatten(SkWriteBuffer&) const override;
     bool onFilterPath(SkPath* dst, const SkPath& src, SkStrokeRec*, const SkRect*) const override;
-    // TODO: override onComputeFastBounds (I think)
 
 private:
     SK_FLATTENABLE_HOOKS(SkStrokeAndFillPE)
+
+    bool computeFastBounds(SkRect* bounds) const override {
+        // The effect's bounds depend on the StrokeRect that is not yet available
+        return false;
+    }
 
     using INHERITED = SkPathEffect;
 };
 
 #endif
-
